--- a/5-GitHub/slides.tex
+++ b/5-GitHub/slides.tex
@@ -18,8 +18,7 @@
 }
 \graphicspath{ {./assets} }
 \settasks{style=enumerate}
-% \subsectionfont{\color{astral}}
-% \sectionfont{\color{astral}}
+% \subsectionfont{\color{astral}} % \sectionfont{\color{astral}}
 % \useoutertheme{infolines}
 \setbeamercolor{frametitle}{fg=VioletDark,bg=Violet!10}
 \setbeamercolor{section in head/foot}{bg=Violet}
@@ -79,8 +78,7 @@
 	}
 \end{frame}
 
-\begin{frame}{Git: Commits}
-	\begin{itemize}
+\begin{frame}{Git: Commits} \begin{itemize}
 		\item Let's say we're working on a project called ``\textbf{Cool Project}"
 		\item It might look like this, from the perspective of Git
 	\end{itemize}
@@ -90,7 +88,7 @@
 
 	\note{
 		- 1A. You wok on ``cool project'' for a while and finish 1st version
-		- 1B. You tell git to "add all my changes", and tell git to "commit" or save my changes
+		- 1B. You tell git to ``add all my changes", and tell git to ``commit" or save my changes
 		- Think of it like ``perfectly commiting something to memory''
 		- 2A. And so on
 		- Tie in with slide 1
@@ -128,6 +126,7 @@
 	\end{itemize}
 
 	\vspace{0.25cm}
+	{\large \textbf{Terms}}
 	\begin{itemize}
 		\item \textbf{repository:} a project that is tracked by Git
 		\item \textbf{issue:} support ticket / a problem that needs to be solved
